--- a/index.html
+++ b/index.html
@@ -5,11 +5,39 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<script src=""></script>
+
+	<div class="wrapper">
+		<section class="circle">
+			<div class="twelve">12</div>
+			<div class="one">1</div>
+			<div class="two">2</div>
+			<div class="three">3</div>
+			<div class="four">4</div>
+			<div class="five">5</div>
+			<div class="six">6</div>
+			<div class="seven">7</div>
+			<div class="eight">8</div>
+			<div class="nine">9</div>
+			<div class="ten">10</div>
+			<div class="eleven">11</div>
+			<div class="middle"></div>
+			<div class="hour"></div>
+			<div class="minute"></div>
+			<div class="second"></div>
+
+			<!--
+			<div class="vertical"></div>
+			<div class="horizontal"></div>
+			<div class="padding"></div>
+-->
+
+		</section>
+	</div>
+	<script src="app.js"></script>
 </body>
 
 </html>
